tests/paczka1/small_fuzzy/43357491.err
Error in line 4: 647 76 3,1
Error in line 1: tYaV A647 83,4
Error in line 5: tYaV A588 50,6
